<resources>
    <string name="app_name">Eaves Street</string>

    <string name="mainfragment_ticker_title">Ticker</string>
    <string name="mainfragment_ticker_close">Close Price</string>
    <string name="mainfragment_ticker_fullname">Full Name</string>
    <string name="mainfragment_ticker_yesterday_change">Yesterday\'s Change</string>
    <string name="mainfragment_ticker_location">Location</string>
    <string name="mainfragment_ticker_country">Country</string>
    <string name="mainfragment_ticker_joined">Joined</string>
    <string name="mainfragment_ticker_volume">Volume Traded</string>
    <string name="mainfragment_ticker_dividend">Average Dividend</string>
    <string name="mainfragment_ticker_balance">Eaves Balance</string>
    <string name="mainfragment_ticker_investments">Investments</string>
    <string name="mainfragment_ticker_shareholders">Shareholders</string>

    <string name="widget_close">Close</string>
    <string name="widget_change">Change</string>
    <string name="widget_default_text">Updating....</string>

    <string name="refresh">Refresh</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_notification_text">You need to re-authenticate</string>
    <string name="widget_error_auth">Authentication Error</string>
    <string name="widget_error_network">Network Error</string>
    <string name="eavesmain_toast_update">Widget Updated</string>
    <string name="eavesstreet_error_view">Network Connection Error!</string>


    <string name="io.branch.apiKey" translatable="false">key_live_oirfJCmoSSfV80rVaRDFZfoftqb2i880</string>
</resources>
