<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background_gradient"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/widget_ticker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/widget_text"
            android:text="@string/widget_default_text"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="#ffffff"
            android:textSize="@dimen/widget_text"
            android:text="@string/widget_close"
            android:layout_weight="2"
            />


        <TextView
            android:id="@+id/widget_close"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/widget_text"
            android:layout_weight="1"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textColor="#ffffff"
            android:textSize="@dimen/widget_text"
            android:layout_weight="3"
            android:text="@string/widget_change"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:src="@drawable/ic_arrow_up"
            android:id="@+id/widget_change_up"
            android:visibility="gone"
            />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:src="@drawable/ic_arrow_down"
            android:id="@+id/widget_change_down"
            android:visibility="gone"
            />


        <TextView
            android:id="@+id/widget_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:textSize="@dimen/widget_text"
            android:layout_weight="1"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>